# topstitch

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.rs  derived_pins.rs  features.rs  overlapped_pins.rs  pin_range_example.rs  pinning.rs  pinning_speed_test.rs  stub.rs  vertical_pinning.rs
examples/input/: adder.sv  block.sv  pack.sv
examples/tb/: demo.sh  demo.sv
examples/verilog/: adder.sv  multiplier.sv
src/: connection.rs  enum_type.rs  funnel.rs  inout.rs  intf.rs  io.rs  lefdef.rs  lib.rs  metadata.rs  mod_def.rs  mod_inst.rs  package.rs  pipeline.rs  port.rs  port_slice.rs  usage.rs  util.rs  validate.rs
src/connection/: connected_item.rs  expression_source.rs  port_slice.rs  validate.rs
src/intf/: connect.rs  copy.rs  crossover.rs  debug.rs  export.rs  feedthrough.rs  subdivide.rs  tieoff.rs  width.rs
src/mod_def/: abutment.rs  core.rs  dtypes.rs  edges.rs  emit.rs  feedthrough.rs  hierarchy.rs  instances.rs  intf.rs  lef_parse.rs  lefdef.rs  parameterize.rs  parser.rs  parser_cfg.rs  pins.rs  placement.rs  ports.rs  shape.rs  stub.rs  tracks.rs  validate.rs  wrap.rs
src/port/: connect.rs  export.rs  feedthrough.rs  tieoff.rs  trace.rs
src/port_slice/: connect.rs  export.rs  feedthrough.rs  tieoff.rs  trace.rs
src/validate/: inst_overlap.rs  pins_contained.rs
tests/: basic.rs  emit.rs  emit_lefdef.rs  hierarchy.rs  lef_import.rs  lef_pins.rs  lefdef_gen.rs  metadata.rs  mod_inst_distance.rs  package.rs  placement.rs  spdx_test.rs  test.rs  threading.rs  track_offset.rs  unpinned_port_slices.rs  version_test.rs
tests/checks/: abutment.rs  lefdef.rs  mod.rs  nets.rs  unused.rs  (+1 more)
(+27 files in other folders)
