[package]
name = "topstitch"
version = "0.34.0"
edition = "2021"
license = "Apache-2.0"
description = "Stitch together Verilog modules with Rust"
repository = "https://github.com/xlsynth/topstitch"
homepage = "https://github.com/xlsynth/topstitch"
documentation = "https://docs.rs/topstitch"

[dependencies]
num-bigint = "0.4.3"
indexmap = "2.5.0"
xlsynth = "0.0.51"
slang-rs = "0.12.0"
itertools = "0.10"
regex = "1.11.0"
