[package]
name = "topstitch"
version = "0.92.0"
edition = "2024"
license = "Apache-2.0"
description = "Stitch together Verilog modules with Rust"
repository = "https://github.com/xlsynth/topstitch"
homepage = "https://github.com/xlsynth/topstitch"
documentation = "https://docs.rs/topstitch"

[dependencies]
num-bigint = "0.4.3"
indexmap = "2.5.0"
xlsynth = "0.19.0"
slang-rs = "0.21.0"
itertools = "0.10"
regex = "1.11.0"
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
fixedbitset = "0.5.7"
paste = "1.0.15"
geo = "0.31.0"
rstar = "0.12.2"

[dev-dependencies]
cargo_metadata = "0.18"
tempfile = "3"
curl = "0.4"
serde_json = "1.0"
log = "0.4"
toml = "0.5"
semver = "1.0"
env_logger = "0.11"
rstest = "0.26.1"
